[tool.poetry]
name = "dockerContainerAPI"
version = "0.1.1"
description = "An API to be deployed in rapberry pi slaves and master in order to contorl the docker containers running on that server."
authors = ["Artic42 <main@artic42.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
articlib = "^0.2.3"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
flake8 = "^7.1.1"
mypy = "^1.11.2"
types-rpi-gpio = "^0.7.0.20240314"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [".venv", ".git", "__pycache__"]
max-line-length = 100

[tool.mypy]
with-error-codes = true